--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "rice-counter",
+    "name": "Rice counter",
     "slug": "rice-counter",
+    "owner": "asikowe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
